--- a/.github/workflows/tesing-CI.yml
+++ b/.github/workflows/tesing-CI.yml
@@ -48,6 +48,10 @@ jobs:
       - name: Wait for server to start
         run: sleep 10 # Adjust based on how long your backend takes to start
 
+      # Debug File Path (List all files in workspace)
+      - name: Debug File Path
+        run: ls -R ${{ github.workspace }}
+
       # Run Postman API tests
       - name: Run API tests
         run: |
