--- a/.github/workflows/tesing-CI.yml
+++ b/.github/workflows/tesing-CI.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18 # Use the correct version for your project
+          node-version: 22 # Use the correct version for your project
 
      # Move to backend directory
       - name: Change to backend directory
@@ -25,11 +25,11 @@ jobs:
           cd backend
           npm install
       
-      # Start backend server in the background
-      - name: Start backend server
-        run: |
-          cd backend
-          nohup npm start > server.log 2>&1 &
+      # # Start backend server in the background
+      # - name: Start backend server
+      #   run: |
+      #     cd backend
+      #     nohup npm start > server.log 2>&1 &
       
       # Start backend server in the background
       - name: Start backend server
@@ -50,11 +50,11 @@ jobs:
 
       # Debug File Path (List all files in workspace)
       - name: Debug File Path
-        run: ls -R ${{ github.workspace }}/BeReload/test/backend
+        run: ls -R ${{ github.workspace }}/test/backend
 
       # Run Postman API tests
       - name: Run API tests
         run: |
           postman collection run "42768841-3b6369d7-4a8d-48b3-8ba1-813b73d0765c" \
             -e "42768841-30686299-bc78-4b88-a224-6b2230eb2ab8" \
-            -d "${{ github.workspace }}/BeReload/test/backend/testcases.json"
+            -d "${{ github.workspace }}/test/backend/testcases.json"
