--- a/.github/workflows/tesing-CI.yml
+++ b/.github/workflows/tesing-CI.yml
@@ -51,5 +51,5 @@ jobs:
         run: |
           postman collection run "42768841-3b6369d7-4a8d-48b3-8ba1-813b73d0765c" \
             -e "42768841-30686299-bc78-4b88-a224-6b2230eb2ab8" \
-            -d "${{ github.workspace }}/test/backend/testcases.json" \
-            --folder "Authentication"
+            -d "${{ github.workspace }}/test/backend/testcases.json"
+            --env-var TEST_CASE_ID="ADMIN_LOGIN"
