--- a/.github/workflows/BackendAPITesting.yml
+++ b/.github/workflows/BackendAPITesting.yml
@@ -1,11 +1,10 @@
 name: Automated API tests using Postman CLI
-
-on: push
-
+'on': push
 jobs:
   automated-api-tests:
     runs-on: ubuntu-latest
     steps:
+      
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -13,9 +12,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22  # Use the correct version for your project
+          node-version: 22
 
-     # Move to backend directory
+      # Start backend server in the background
       - name: Change to backend directory
         run: cd backend
 
@@ -24,24 +23,31 @@ jobs:
         run: |
           cd backend
           npm install
+
       # Set environment variables
       - name: Set environment variables
-        run: |
+        run: >
           echo "PORT=${{ secrets.PORT }}" >> $GITHUB_ENV
-          echo "DB_CONNECTION_STRING=${{ secrets.DB_CONNECTION_STRING }}" >> $GITHUB_ENV
+          echo "DB_CONNECTION_STRING=${{ secrets.DB_CONNECTION_STRING }}" >>
+          $GITHUB_ENV
           echo "JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}" >> $GITHUB_ENV
-          echo "TWILIO_ACCOUNT_SID=${{ secrets.TWILIO_ACCOUNT_SID }}" >> $GITHUB_ENV
-          echo "TWILIO_AUTH_TOKEN=${{ secrets.TWILIO_AUTH_TOKEN }}" >> $GITHUB_ENV
-          echo "TWILIO_PHONE_NUMBER=${{ secrets.TWILIO_PHONE_NUMBER }}" >> $GITHUB_ENV
+          echo "TWILIO_ACCOUNT_SID=${{ secrets.TWILIO_ACCOUNT_SID }}" >>
+          $GITHUB_ENV
+          echo "TWILIO_AUTH_TOKEN=${{ secrets.TWILIO_AUTH_TOKEN }}" >>
+          $GITHUB_ENV
+          echo "TWILIO_PHONE_NUMBER=${{ secrets.TWILIO_PHONE_NUMBER }}" >>
+          $GITHUB_ENV
           echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
-          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
-          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >>
+          $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >>
+          $GITHUB_ENV
           echo "AWS_SES_EMAIL=${{ secrets.AWS_SES_EMAIL }}" >> $GITHUB_ENV
           echo "AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }}" >> $GITHUB_ENV
-      
+
       # Start backend server in the background
       - name: Start backend server
-        run: node ${{ github.workspace }}/backend/server.js &
+        run: 'node ${{ github.workspace }}/backend/server.js &'
 
       # Install Postman CLI
       - name: Install Postman CLI
@@ -50,27 +56,28 @@ jobs:
 
       # Login to Postman CLI
       - name: Login to Postman CLI
-        run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
+        run: 'postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}'
 
       # Wait for the server to be fully ready (optional)
       - name: Wait for server to start
-        run: sleep 10 # Adjust based on how long your backend takes to start
+        run: sleep 10
 
       # # Debug File Path (List all files in workspace)
       # - name: Debug File Path
       #   run: ls -R ${{ github.workspace }}/test/backend
 
       # Run Postman API tests
-      - name: Run API tests
-        run: |
-          for ID in $(echo $TEST_CASE_IDS | jq -r '.[]'); do
+      # Extract test case IDs from JSON and run tests dynamically
+      - name: Run API tests for all TEST_CASE_IDS
+        run: >
+          TEST_CASE_IDS=$(jq -r '.[]' "${{ github.workspace
+          }}/test/backend/testcases.json")
+
+          for ID in $TEST_CASE_IDS; do
             echo "Running tests for TEST_CASE_ID=$ID"
             postman collection run "42768841-3b6369d7-4a8d-48b3-8ba1-813b73d0765c" \
               -e "42768841-30686299-bc78-4b88-a224-6b2230eb2ab8" \
               -d "${{ github.workspace }}/test/backend/testcases.json" \
               --env-var TEST_CASE_ID="$ID"
           done
-          
-
-
 
