--- a/.github/workflows/BackendAPITesting.yml
+++ b/.github/workflows/BackendAPITesting.yml
@@ -1,10 +1,11 @@
 name: Automated API tests using Postman CLI
-'on': push
+
+on: push
+
 jobs:
   automated-api-tests:
     runs-on: ubuntu-latest
     steps:
-      
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -12,9 +13,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 22  # Use the correct version for your project
 
-      # Start backend server in the background
+     # Move to backend directory
       - name: Change to backend directory
         run: cd backend
 
@@ -23,39 +24,24 @@ jobs:
         run: |
           cd backend
           npm install
-
-      # # Debug the environment Variables
-      # - name: Debug Environment Variables
-      #   run: env | grep DB_CONNECTION_STRING
-
       # Set environment variables
       - name: Set environment variables
-        run: >
+        run: |
           echo "PORT=${{ secrets.PORT }}" >> $GITHUB_ENV
-          echo "DB_CONNECTION_STRING=${{ secrets.DB_CONNECTION_STRING }}" >>
-          $GITHUB_ENV
+          echo "DB_CONNECTION_STRING=${{ secrets.DB_CONNECTION_STRING }}" >> $GITHUB_ENV
           echo "JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}" >> $GITHUB_ENV
-          echo "TWILIO_ACCOUNT_SID=${{ secrets.TWILIO_ACCOUNT_SID }}" >>
-          $GITHUB_ENV
-          echo "TWILIO_AUTH_TOKEN=${{ secrets.TWILIO_AUTH_TOKEN }}" >>
-          $GITHUB_ENV
-          echo "TWILIO_PHONE_NUMBER=${{ secrets.TWILIO_PHONE_NUMBER }}" >>
-          $GITHUB_ENV
+          echo "TWILIO_ACCOUNT_SID=${{ secrets.TWILIO_ACCOUNT_SID }}" >> $GITHUB_ENV
+          echo "TWILIO_AUTH_TOKEN=${{ secrets.TWILIO_AUTH_TOKEN }}" >> $GITHUB_ENV
+          echo "TWILIO_PHONE_NUMBER=${{ secrets.TWILIO_PHONE_NUMBER }}" >> $GITHUB_ENV
           echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
-          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >>
-          $GITHUB_ENV
-          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >>
-          $GITHUB_ENV
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
           echo "AWS_SES_EMAIL=${{ secrets.AWS_SES_EMAIL }}" >> $GITHUB_ENV
           echo "AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }}" >> $GITHUB_ENV
-
-      # Debug the environment Variables
-      - name: Debug Environment Variables
-        run: env | grep DB_CONNECTION_STRING
-
+      
       # Start backend server in the background
       - name: Start backend server
-        run: 'node ${{ github.workspace }}/backend/server.js &'
+        run: node ${{ github.workspace }}/backend/server.js &
 
       # Install Postman CLI
       - name: Install Postman CLI
@@ -64,11 +50,11 @@ jobs:
 
       # Login to Postman CLI
       - name: Login to Postman CLI
-        run: 'postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}'
+        run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
 
       # Wait for the server to be fully ready (optional)
       - name: Wait for server to start
-        run: sleep 10
+        run: sleep 10 # Adjust based on how long your backend takes to start
 
       # # Debug File Path (List all files in workspace)
       # - name: Debug File Path
