--- a/.github/workflows/BackendAPITesting.yml
+++ b/.github/workflows/BackendAPITesting.yml
@@ -65,4 +65,5 @@ jobs:
         run: |
           postman collection run "42768841-3b6369d7-4a8d-48b3-8ba1-813b73d0765c" \
             -e "42768841-30686299-bc78-4b88-a224-6b2230eb2ab8" \
-            --variable "testCases=${{ github.workspace }}/test/backend/testcases.json"
+            # -d "${{ github.workspace }}/test/backend/testcases.json"
+            --env-var  "testCases=${{ github.workspace }}/test/backend/testcases.json"
