--- a/.github/workflows/BackendAPITesting.yml
+++ b/.github/workflows/BackendAPITesting.yml
@@ -52,18 +52,21 @@ jobs:
       - name: Login to Postman CLI
         run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
 
+      # Install Newman
+      - name: Install Newman
+        run: npm install -g newman
+
       # Wait for the server to be fully ready (optional)
       - name: Wait for server to start
         run: sleep 10 # Adjust based on how long your backend takes to start
-
-      # # Debug File Path (List all files in workspace)
-      # - name: Debug File Path
-      #   run: ls -R ${{ github.workspace }}/test/backend
+        
 
       # Run Postman API tests
       - name: Run API tests
         run: |
-          postman collection run "42768841-3b6369d7-4a8d-48b3-8ba1-813b73d0765c" \
+          newman run "42768841-3b6369d7-4a8d-48b3-8ba1-813b73d0765c" \
             -e "42768841-30686299-bc78-4b88-a224-6b2230eb2ab8" \
-            # -d "${{ github.workspace }}/test/backend/testcases.json"
-            --env-var  "testCases=${{ github.workspace }}/test/backend/testcases.json"
+            --env-var "testCases=${{ github.workspace }}/test/backend/testcases.json"
+          # postman collection run "42768841-3b6369d7-4a8d-48b3-8ba1-813b73d0765c" \
+          #   -e "42768841-30686299-bc78-4b88-a224-6b2230eb2ab8" \
+          #   -d "${{ github.workspace }}/test/backend/testcases.json"
