--- a/.github/workflows/BackendAPITesting.yml
+++ b/.github/workflows/BackendAPITesting.yml
@@ -62,6 +62,10 @@ jobs:
         run: |
           # Read the content of the testcases.json file and escape special characters
           testCases=$(cat ${{ github.workspace }}/test/backend/testcases.json | jq -sRr @uri)
+          
+          # Log the data to check its contents
+          echo "Test Cases Data: $testCases"
+          
           echo "testCases=${testCases}" >> $GITHUB_ENV
 
       # Run Postman API tests
