--- a/.github/workflows/BackendAPITesting.yml
+++ b/.github/workflows/BackendAPITesting.yml
@@ -57,16 +57,26 @@ jobs:
       - name: Wait for server to start
         run: sleep 10 # Adjust based on how long your backend takes to start
 
-      # Set the testCases variable by reading the content of the file
-      - name: Set testCases variable
+      # # Set the testCases variable by reading the content of the file
+      # - name: Set testCases variable
+      #   run: |
+      #     # Read the content of the testcases.json file and escape special characters
+      #     testCases=$(cat ${{ github.workspace }}/test/backend/testcases.json | jq -sRr @uri)    
+      #     echo "testCases=${testCases}" >> $GITHUB_ENV
+
+      - name: Update Postman Environment with Test Cases
         run: |
-          # Read the content of the testcases.json file and escape special characters
-          testCases=$(cat ${{ github.workspace }}/test/backend/testcases.json | jq -sRr @uri)    
-          echo "testCases=${testCases}" >> $GITHUB_ENV
+          ENV_FILE="test-env-updated.json"
+          curl -s -X GET "https://api.getpostman.com/environments/42768841-30686299-bc78-4b88-a224-6b2230eb2ab8" \
+            -H "X-Api-Key: ${{ secrets.POSTMAN_API_KEY }}" | jq ".environment.values += [{\"key\": \"testCases\", \"value\": \"$(jq -c . < ${{ github.workspace }}/test/backend/testcases.json)\", \"type\": \"default\"}]" > $ENV_FILE
+
+          curl -s -X PUT "https://api.getpostman.com/environments/42768841-30686299-bc78-4b88-a224-6b2230eb2ab8" \
+            -H "X-Api-Key: ${{ secrets.POSTMAN_API_KEY }}" \
+            -H "Content-Type: application/json" \
+            -d @"$ENV_FILE"
 
       # Run Postman API tests
       - name: Run API tests
         run: |
           postman collection run "42768841-3b6369d7-4a8d-48b3-8ba1-813b73d0765c" \
-            -e "42768841-30686299-bc78-4b88-a224-6b2230eb2ab8" \
-            --env-var "testCases=${{ env.testCases }}" -r cli,json,html
+            -e "42768841-30686299-bc78-4b88-a224-6b2230eb2ab8" -r cli,json,html
